<resources>
    <string name="app_name">FirstApp</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_fotbal">Fotbal</string>
    <string name="menu_baschet">Baschet</string>
    <string name="menu_volei">Volei</string>
    <string name="bine_ai_venit">Bine ai venit,</string>
    <string name="sport_deck">SportDeck</string>
    <string name="account">Don\'t have an account? Sign up!</string>
    <string name="email">Email</string>
    <string name="retype_pass">Confirm password</string>
    <string name="signup">Sign up</string>
    <string name="problem">Tell us about your problem:</string>
    <string name="send">Send</string>
    
    <string name="google_maps_API">AIzaSyCfo_PoDasfH4ibvK3yRuQc-plK92YxIYw</string>
</resources>