<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_fotbal">

    <fragment
        android:id="@+id/nav_fotbal"
        android:name="com.example.firstapp.ui.fotbal.FotbalFragment"
        android:label="@string/menu_fotbal"
        tools:layout="@layout/fragment_baschet" />

    <fragment
        android:id="@+id/nav_baschet"
        android:name="com.example.firstapp.ui.baschet.BaschetFragment"
        android:label="@string/menu_baschet"
        tools:layout="@layout/fragment_fotbal" />

    <fragment
        android:id="@+id/nav_volei"
        android:name="com.example.firstapp.ui.volei.VoleiFragment"
        android:label="@string/menu_volei"
        tools:layout="@layout/fragment_volei" />
</navigation>